# TFG

./: CITATION.cff  CMakeLists.txt  README.md  configuration.hpp  run_protobuf.sh  runner.sh
binding/pycontroller/: CMakeLists.txt
binding/pycontroller/g1_controller/: CMakeLists.txt  g1_interface_pybind_pin.cpp
config/g1/sim/mujoco/ihwbc/: MPC_LOCOMOTION.yaml  mujoco_params.yaml  pnc.yaml
config/g1/sim/mujoco/wbic/: mujoco_params.yaml
config/g1/sim/pybullet/ihwbc/: pnc.yaml  pybullet_params.py
data_example/: g1_test.pkl
util/: CMakeLists.txt  path_parameterization.py  pkl_reader.cpp  pkl_reader.hpp  pkl_reader_example.cpp  pkl_utils.hpp
util/mujoco_utils/: CMakeLists.txt
util/mujoco_utils/include/: mujoco_utils.hpp
util/mujoco_utils/src/: mujoco_utils.cpp
